appId: host.exp.exponent
---
- tapOn: "Show navigation menu"
- tapOn: "Concordia Shuttle"
- assertVisible: "BUS SHUTTLE DEPARTURE TIMES"   