appId: host.exp.exponent
---
- tapOn: "Show navigation menu"
- tapOn: "Directions to next class"
- tapOn: "DIRECTIONS TO NEXT CLASS"
- tapOn:
    id: "android:id/button1"
- tapOn: "GO"
