appId: host.exp.exponent
---
- tapOn: "Show navigation menu"
- tapOn: "Points of interests"
- tapOn:
    point: "10%,94%"