#issue #57
appId: host.exp.exponent
---
- tapOn:
    point: "6%,9%" 
- tapOn: "Outdoor Directions"
- tapOn:
    point: 20%,46%
- tapOn:
    point: "50%,46%"
- tapOn:
    point: "80%,46%"
- tapOn:
    point: 20%,46%