#issue #58
appId: host.exp.exponent
---
- tapOn:
    point: "6%,9%" 
- tapOn: "Concordia Shuttle"
- assertVisible: "BUS SHUTTLE DEPARTURE TIMES"   