#issue 62
ppId: host.exp.exponent
---
- tapOn: "Show navigation menu"
- tapOn: "Directions to next class"
- assertVisible: "Calendar"